--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,17 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon src/index.js",
-    "start:ci": "node src/index.js"
+    "start:ci": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-datasource": "^0.1.3",
     "apollo-datasource-rest": "^0.1.5",
-    "apollo-server-express": "^2.11.0",
+    "apollo-server": "^2.11.0",
     "apollo-server-testing": "2.6.1",
     "graphql": "^14.2.1",
+    "graphql-yoga": "^1.18.3",
     "isemail": "^3.1.3",
     "nodemon": "^1.18.4",
     "sequelize": "^4.39.0",
